Fixed menu-bar-top z-index.

--- a/src/styl/menu-bar/menu-bar.styl
+++ b/src/styl/menu-bar/menu-bar.styl
@@ -78,7 +78,7 @@
         top: 0;
         right: 0;
         left: 0;
-        z-index: 10;
+        z-index: 11;
 
         @media only screen and (max-width: ($size0 - 1)) {
             display: block;
